Add HSTS to caddy configuration (close #395)
